@@ -3352,6 +3352,7 @@ gui.progress.store_process.label=Storing Process
 gui.progress.validate_process.label=Validating Process
 gui.progress.import_data.label=Importing Data
 gui.progress.auto_wiring.label=Auto-Wiring Operators
+gui.progress.fetching_suggestions.label=Fetching Suggestions
 gui.progress.fetching_database_tables.label=Fetching Database Tables
 gui.progress.test_database_connection.label=Testing Database Connection
 gui.progress.calculate_statistics.label=Calculating Statistics
