@@ -3,8 +3,6 @@ History of changes of the RapidMiner versions
 
 Changes from RapidMiner 5.2.8 to 5.2.9
 --------------------------------------
-* Added "Resize" button to text parameter editor dialog 
-* Added runtime macro viewer
 * Added first wave of new and improved extensive documentation (often including tutorial processes) for many operators.
 * Added improved RapidAnalytics support. New run button: "Run process on RapidAnalytics".
   Can only be used if the process is stored on a RapidAnalytics repository.
@@ -13,6 +11,8 @@ Changes from RapidMiner 5.2.8 to 5.2.9
 * New file system operators: Copy File, Move File, Delete File, Rename File, Create Directory
 * Aggregate: new aggregation functions: sum (fractional), count (fractional), count (percentage) and string concatenation
 * Result Perspective: Added button in top right corner of a result tab to close all open results at once
+* Added new view: 'Macros': This view shows macros and their values in real time during process execution
+* Added resize button to text parameter editor dialog
 * Preferences menu buttons reworked: 'OK' button saves settings permanently and closes the dialog; 
   'Apply' button saves settings permanently and does not close the dialog
 * Generate Data: warn user if the selected number of attributes is not supported by the target function
@@ -59,6 +59,8 @@ Changes from RapidMiner 5.2.8 to 5.2.9
 * BUGFIX: Fixed GUI problem when trying to schedule a process on RapidAnalytics without existing RapidAnalytics repositories
 * BUGFIX: Fixed possible data loss when trying to store data/processes/etc in the repository using invalid characters for the given
 		  filesystem by now showing an error instead of failing silently
+* BUGFIX: fixed an initialization problem in the Cross Distances operator, which caused wrong calculation of distances in some rare cases
+ 
 
 Changes from RapidMiner 5.2.6 to 5.2.8
 --------------------------------------
